# OpenMPC

./: .gitignore  .readthedocs.yaml  README.md  cessna_descent.ipynb  constraint_softening.ipynb  discretization_notebook.ipynb  double_integrator.ipynb  helicopter.ipynb  invariant_sets.ipynb  offset_free_mpc_heat_exchanger.ipynb  project.toml  pyproject.toml  reference_tracking_aircraft.ipynb  requirements.txt  setup.py  single_shooting_pendulum_swingup.ipynb
.binder/: apt.txt  config.json
LinearMPC/: __init__.py  constraints.py  kalman_filter.py  linear_system.py  parameters.py
NonlinearMPC/: ekf.py
docs/source/: about_openmpc.rst  conf.py  examples.rst  index.rst  installation.rst  models.rst  modules.rst  openmpc.filters.rst  openmpc.invariant_sets.rst  openmpc.models.rst  openmpc.mpc.rst  openmpc.rst  openmpc.support.rst  support.rst
examples/: Offsetfree_advanced.ipynb  cessna_descent.ipynb  constraint_softening.ipynb  discretization_notebook.ipynb  double_integrator.ipynb  helicopter.ipynb  index.ipynb  invariant_sets.ipynb  multiple_shooting_pendulum_swingup.ipynb  nonlinear_tracking_heat_exchanger.ipynb  offset_free_advanced.ipynb  offset_free_freeflyer_nmpc.py  offset_free_mpc_heat_exchanger.ipynb  offset_free_simple.ipynb  reference_tracking_aircraft.ipynb  simpleMPC_invPend.ipynb  single_shooting_pendulum_swingup.ipynb  swingup_pendcart_nlmpc.ipynb
openmpc/: __init__.py
openmpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/: cessna_descent.ipynb  linear_simulate.py  nonlinear_simulate.py  test_exf.py  test_nonlinear_mpc.py
(+34 files in other folders)
