[project]
name = "openmpc"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikael Johansson",email = "mikaelj@kth.se"}
]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "casadi (>=3.6.7,<4.0.0)",
    "cvxpy (>=1.6.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "control (>=0.10.1,<0.11.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pycddlib (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
